samples/_failures_safe/1761253755_aad44b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b207fa4.c: In function ‘main’:
./samples/SAFE/__tmp_2b207fa4.c:158:29: error: missing terminating " character
  158 |             fprintf(stderr, "Invalid
      |                             ^~~~~~~~
./samples/SAFE/__tmp_2b207fa4.c:158:13: error: expected expression at end of input
  158 |             fprintf(stderr, "Invalid
      |             ^~~~~~~
./samples/SAFE/__tmp_2b207fa4.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b207fa4.c:158:13: error: expected declaration or statement at end of input
